syntax = "proto3";

package pb;
option go_package = "./pkg/pb";

import "pkg/pb/response.proto";

service UserService {
    rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse){}
}
   

message GetUserProfileRequest {
    uint32 user_id = 1;
}

message GetUserProfileResponse {
    Response response = 1;
    uint32 user_id = 2;
    string first_name = 3;
    string last_name = 4;
    string email  = 5;
}